--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -2,19 +2,54 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
-    <include
-        android:id="@+id/acitonBar_menu"
-        layout="@layout/include_actionbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </include>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+    <RelativeLayout
+        android:id="@+id/rl_classify"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="菜谱"
-        android:gravity="center"/>
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv_classify_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="菜式菜品"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/tv_line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@+id/tv_classify_title"
+            android:background="#999999" />
+
+        <ListView
+            android:id="@+id/lv_classify"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/tv_line"
+            android:background="#EDF2F4"
+            android:scrollbars="none" />
+
+        <TextView
+            android:visibility="gone"
+            android:id="@+id/tv_classify_toast"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="@drawable/edittext_background"
+            android:padding="10dp"
+            android:text="菜式菜品"
+            android:textColor="@color/text_color"
+            android:textSize="24sp" />
+    </RelativeLayout>
+
+    <com.tarena.cookbook.view.IndexView
+        android:id="@+id/index_view"
+        android:layout_width="80dp"
+        android:layout_height="match_parent"
+        android:background="@drawable/main_menu_item_bg" />
 </LinearLayout>
