--- a/app/src/main/res/layout/fragment_recommend.xml
+++ b/app/src/main/res/layout/fragment_recommend.xml
@@ -30,6 +30,7 @@
                 android:layout_height="300dp"
                 android:layout_marginTop="20dp"
                 android:numColumns="3"
+                android:listSelector="#00000000"
                 android:verticalSpacing="20dp" />
 
         </LinearLayout>
