--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:background="@drawable/edittext_background"
+            android:background="@drawable/toast_bg"
             android:padding="10dp"
             android:text="菜式菜品"
             android:textColor="@color/text_color"
