--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.tarena.cookbook.activity.MainActivity">
 
     <com.tarena.cookbook.view.MyViewPager
         android:id="@+id/vp_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"></com.tarena.cookbook.view.MyViewPager>
+        android:layout_height="match_parent"
+        android:layout_above="@+id/main_bottom" />
 
     <include
+        android:id="@+id/main_bottom"
         layout="@layout/include_bottom_menu"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></include>
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true" />
 
-</LinearLayout>
+</RelativeLayout>
