--- a/app/src/main/res/layout/activity_show_cookery.xml
+++ b/app/src/main/res/layout/activity_show_cookery.xml
@@ -43,4 +43,10 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <ListView
+        android:id="@+id/lv_cookery"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="5dp" />
 </LinearLayout>
