--- a/app/src/main/res/layout/activity_show_cookery.xml
+++ b/app/src/main/res/layout/activity_show_cookery.xml
@@ -48,5 +48,7 @@
         android:id="@+id/lv_cookery"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp" />
+        android:layout_margin="5dp"
+        android:background="#EDF2F4"
+        android:scrollbars="none" />
 </LinearLayout>
