--- a/app/src/main/res/layout/activity_cook_details.xml
+++ b/app/src/main/res/layout/activity_cook_details.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:background="#99CC00"
+        android:background="#ea9518"
         android:orientation="horizontal">
 
         <ImageView
@@ -194,7 +194,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:divider="@null"
-                    android:scrollbars="none" />
+                    android:dividerHeight="10dp"
+                    android:scrollbars="none"
+                    android:layout_marginBottom="10dp"/>
             </LinearLayout>
         </ScrollView>
 
