--- a/app/src/main/res/layout/item_gv_category.xml
+++ b/app/src/main/res/layout/item_gv_category.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#ffffff">
 
     <ImageView
         android:id="@+id/iv_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:scaleType="fitXY"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/chinese_cooking" />
 
@@ -16,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="家常炒菜"
-        android:textSize="20sp"
+        android:textSize="16sp"
+        android:textColor="#000"
         android:gravity="center"/>
 </LinearLayout>
