--- a/app/src/main/res/layout/fragment_recommend.xml
+++ b/app/src/main/res/layout/fragment_recommend.xml
@@ -64,13 +64,12 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:padding="10dp">
+                android:layout_marginTop="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="30dp"
+                    android:layout_marginStart="20dp"
                     android:text="常见菜式分类"
                     android:textSize="18sp" />
 
@@ -99,15 +98,24 @@
                 android:numColumns="3"
                 android:verticalSpacing="2dp" />
 
-            <View
+
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#9e9e9e" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:padding="5dp"
+                android:background="#bfbfbf"
+                android:paddingStart="20dp"
+                android:text="每日三餐"
+                android:textSize="18sp" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_recommend"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:background="#bfbfbf" />
         </LinearLayout>
 
     </ScrollView>
