--- a/app/src/main/res/layout/fragment_share.xml
+++ b/app/src/main/res/layout/fragment_share.xml
@@ -11,10 +11,10 @@
         android:layout_height="wrap_content">
     </include>
 
-    <TextView
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:text="展示厨艺"
-        android:gravity="center"/>
+        android:layout_weight="1">
+
+    </FrameLayout>
 </LinearLayout>
