--- a/app/src/main/res/layout/activity_personal.xml
+++ b/app/src/main/res/layout/activity_personal.xml
@@ -74,6 +74,7 @@
         android:layout_marginLeft="40dp"
         android:layout_marginTop="30dp"
         android:layout_toRightOf="@+id/tv_in"
+        android:background="@null"
         android:src="@drawable/ic_my_default_head" />
 
     <EditText
