--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -30,6 +30,7 @@
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_centerVertical="true"
+                    android:background="@null"
                     android:src="@drawable/ic_my_default_head" />
 
                 <TextView
