--- a/app/src/main/res/layout/fragment_recommend.xml
+++ b/app/src/main/res/layout/fragment_recommend.xml
@@ -39,11 +39,11 @@
         </LinearLayout>
 
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
             android:layout_gravity="center_vertical"
             android:padding="5dp"
-            android:src="@drawable/message_unread" />
+            android:src="@drawable/message_read" />
     </LinearLayout>
 
     <ScrollView
