--- a/app/src/main/res/drawable/roundcorner_login_normal.xml
+++ b/app/src/main/res/drawable/roundcorner_login_normal.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle"
     >
     <solid 
-        android:color="#23B751"
+        android:color="#ff00"
         />
 	<corners 
 	    android:radius="150dp"
