--- a/app/src/main/res/drawable/roundcorner_login_preseed.xml
+++ b/app/src/main/res/drawable/roundcorner_login_preseed.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle"
     >
     <solid
-        android:color="#2E7D32"
+        android:color="#ff00"
         />
 	<corners 
 	    android:radius="150dp"
