--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -10,68 +10,134 @@
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize" />
 
-    <ScrollView
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#9e9e9e" />
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:background="#eeeeee">
 
         <RelativeLayout
+            android:id="@+id/rl_my_setting"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp">
+            android:padding="10dp"
+            android:background="#fff">
 
-            <RelativeLayout
-                android:id="@+id/rl_my_setting"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/iv_header"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
+                android:background="@null"
+                android:src="@drawable/ic_my_default_head" />
 
-                <ImageView
-                    android:id="@+id/iv_header"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_centerVertical="true"
-                    android:background="@null"
-                    android:src="@drawable/ic_my_default_head" />
+            <TextView
+                android:id="@+id/tv_username"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_alignTop="@+id/iv_header"
+                android:layout_marginStart="20dp"
+                android:layout_toEndOf="@+id/iv_header"
+                android:gravity="center_vertical"
+                android:text="点击登陆"
+                android:textColor="#000"
+                android:textSize="18sp" />
 
-                <TextView
-                    android:id="@+id/tv_username"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_toEndOf="@+id/iv_header"
-                    android:gravity="center_vertical"
-                    android:text="点击登陆"
-                    android:textColor="#000"
-                    android:textSize="22sp" />
-
-                <TextView
-                    android:id="@+id/tv_signature"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_below="@+id/tv_username"
-                    android:layout_marginStart="20dp"
-                    android:layout_toEndOf="@+id/iv_header"
-                    android:gravity="center_vertical"
-                    android:singleLine="true"
-                    android:text="据说登陆的人做饭更好吃"
-                    android:textSize="18sp" />
-            </RelativeLayout>
-
-
-            <Button
-                android:id="@+id/btn_quit"
-                android:layout_width="200dp"
-                android:layout_height="36dp"
-                android:layout_alignParentBottom="true"
-                android:layout_below="@id/rl_my_setting"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="50dp"
-                android:background="@drawable/selector_login_button"
-                android:text="退出当前账号"
-                android:textColor="#ffffff"
+            <TextView
+                android:id="@+id/tv_signature"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_below="@+id/tv_username"
+                android:layout_marginStart="20dp"
+                android:layout_toEndOf="@+id/iv_header"
+                android:gravity="center_vertical"
+                android:singleLine="true"
+                android:text="据说登陆的人做饭更好吃"
                 android:textSize="14sp" />
         </RelativeLayout>
 
-    </ScrollView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_below="@+id/rl_my_setting"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:background="#fff"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/ll_collect"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="我的收藏"
+                    android:gravity="center_vertical"
+                    android:paddingStart="10dp"
+                    android:textSize="18sp"
+                    android:textColor="#000"/>
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/next"/>
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="#9e9e9e"/>
+            <LinearLayout
+                android:id="@+id/ll_look"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="我的浏览"
+                    android:gravity="center_vertical"
+                    android:paddingStart="10dp"
+                    android:textSize="18sp"
+                    android:textColor="#000"/>
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_gravity="center_vertical"
+                    android:src="@drawable/next"/>
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="#9e9e9e"/>
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_quit"
+            android:layout_width="200dp"
+            android:layout_height="36dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/selector_login_button"
+            android:text="退出当前账号"
+            android:textColor="#ffffff"
+            android:textSize="14sp" />
+    </RelativeLayout>
+
 
 </LinearLayout>
