--- a/app/src/main/res/layout/include_actionbar.xml
+++ b/app/src/main/res/layout/include_actionbar.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="?actionBarSize"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="#ffffff">
     <ImageView
         android:id="@+id/iv_actionBar_left"
         android:src="@drawable/add_menu"
