--- a/app/src/main/res/layout/item_share_food.xml
+++ b/app/src/main/res/layout/item_share_food.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:padding="10dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/item_iv_head"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
         android:src="@mipmap/ic_launcher" />
 
     <TextView
@@ -39,20 +38,29 @@
         android:id="@+id/imagesLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/item_tv_content"
         android:layout_alignLeft="@+id/item_tv_nickname"
+        android:layout_below="@+id/item_tv_content"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp">
-    </RelativeLayout>
+        android:layout_marginTop="10dp"></RelativeLayout>
 
     <TextView
         android:id="@+id/item_tv_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imagesLayout"
         android:layout_alignLeft="@+id/item_tv_nickname"
+        android:layout_below="@+id/imagesLayout"
         android:layout_marginTop="10dp"
         android:text="234"
         android:textColor="#6E6E6E"
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/item_tv_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/item_tv_time"
+        android:layout_alignParentEnd="true"
+        android:text="删除"
+        android:textColor="#0277BD"
         android:textSize="14sp" />
 </RelativeLayout>
