--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -28,8 +28,8 @@
             android:src="@drawable/back" />
     </RelativeLayout>
 
-    <ListView
-        android:id="@+id/lv_history"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_history"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
