--- a/app/src/main/res/layout/activity_cook_details.xml
+++ b/app/src/main/res/layout/activity_cook_details.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
+        android:layout_height="40dp"
         android:background="#ea9518"
         android:orientation="horizontal">
 
@@ -25,8 +25,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="菜名"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textSize="18sp" />
     </LinearLayout>
 
     <RelativeLayout
@@ -193,10 +192,10 @@
                     android:id="@+id/lv_steps"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
                     android:divider="@null"
                     android:dividerHeight="10dp"
-                    android:scrollbars="none"
-                    android:layout_marginBottom="10dp"/>
+                    android:scrollbars="none" />
             </LinearLayout>
         </ScrollView>
 
