--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -2,26 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#eeeeee"
+    android:background="#ffffff"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/tv_back"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
+        android:layout_height="40dp"
         android:background="#64B5F6"
         android:drawableStart="@drawable/back"
         android:gravity="start|center_vertical"
-        android:padding="10dp"
         android:text="问题和意见"
+        android:paddingStart="5dp"
         android:textSize="18sp" />
 
     <EditText
         android:id="@+id/et_describe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#ffffff"
         android:gravity="top"
+        android:textSize="14sp"
+        android:background="#ffffff"
         android:hint="请简要描述您要反馈的问题和意见"
         android:maxLines="8"
         android:minLines="8"
@@ -32,6 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
+        android:background="#eeeeee"
         android:text="图片(选填，提供问题截图)"
         android:textSize="12sp" />
 
@@ -39,12 +41,14 @@
         android:id="@+id/rv_add_imgs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp" />
+        android:padding="5dp"
+        />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/dp_10"
+        android:background="#eeeeee"
         android:text="联系方式(必填)"
         android:textSize="12sp" />
 
@@ -56,6 +60,10 @@
         android:hint="微信/QQ/邮箱/手机号"
         android:padding="10dp"
         android:singleLine="true" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#eeeeee"/>
 
     <Button
         android:id="@+id/btn_submit"
