--- a/app/src/main/res/layout/activity_message_detail.xml
+++ b/app/src/main/res/layout/activity_message_detail.xml
@@ -35,7 +35,7 @@
             android:gravity="center"
             android:text="美食详情"
             android:textColor="#007AFF"
-            android:textSize="14sp" />
+            android:textSize="16sp" />
     </RelativeLayout>
 
     <ListView
@@ -43,7 +43,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/rl_title"
-        android:background="#eeeeee"/>
+        android:background="#eeeeee"
+        android:scrollbars="none"/>
 
     <RelativeLayout
         android:id="@+id/rl_bottom"
@@ -72,6 +73,7 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
+                android:hint="说点啥..."
                 android:background="@drawable/edittext_background"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
