--- a/app/src/main/res/layout/activity_my_cook.xml
+++ b/app/src/main/res/layout/activity_my_cook.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/tv_mc_back"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
+        android:layout_height="40dp"
         android:background="#64B5F6"
         android:drawableStart="@drawable/back"
         android:gravity="center"
