--- a/app/src/main/res/layout/activity_show_cookery.xml
+++ b/app/src/main/res/layout/activity_show_cookery.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
+        android:layout_height="50dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -16,15 +16,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:paddingStart="5dp"
             android:src="@drawable/back" />
 
         <LinearLayout
             android:id="@+id/ll_search"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:layout_weight="1"
-            android:background="#cdcdcd">
+            android:background="#eeeeee">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -39,17 +43,17 @@
                 android:gravity="center"
                 android:text="菜谱、食材"
                 android:textColor="#000"
-                android:textSize="16sp" />
+                android:textSize="14sp" />
         </LinearLayout>
 
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_cookery"
-        android:divider="@null"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="5dp"
         android:background="#EDF2F4"
+        android:divider="@null"
+        android:padding="5dp"
         android:scrollbars="none" />
 </LinearLayout>
