--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -14,10 +14,10 @@
         <TextView
             android:id="@+id/tv_classify_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
+            android:layout_height="40dp"
+            android:padding="6dp"
             android:text="菜式菜品"
-            android:textSize="20sp" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tv_line"
@@ -49,7 +49,7 @@
 
     <com.tarena.cookbook.view.IndexView
         android:id="@+id/index_view"
-        android:layout_width="80dp"
+        android:layout_width="70dp"
         android:layout_height="match_parent"
         android:background="@drawable/main_menu_item_bg" />
 </LinearLayout>
