--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -34,6 +34,7 @@
                 android:id="@+id/iv_header"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
+                android:scaleType="fitXY"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10dp"
                 android:background="@null"
@@ -48,8 +49,8 @@
                 android:layout_toEndOf="@+id/iv_header"
                 android:gravity="center_vertical"
                 android:text="点击登陆"
-                android:textColor="#000"
-                android:textSize="18sp" />
+
+                 />
 
             <TextView
                 android:id="@+id/tv_signature"
@@ -61,13 +62,13 @@
                 android:gravity="center_vertical"
                 android:singleLine="true"
                 android:text="据说登陆的人做饭更好吃"
-                android:textSize="14sp" />
+                 />
         </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/linearLayout_1"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/rl_my_setting"
             android:layout_marginTop="10dp"
             android:background="#fff"
@@ -76,7 +77,7 @@
             <LinearLayout
                 android:id="@+id/ll_collect"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="42dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -86,8 +87,8 @@
                     android:gravity="center_vertical"
                     android:paddingStart="10dp"
                     android:text="我的收藏"
-                    android:textColor="#000"
-                    android:textSize="18sp" />
+
+                     />
 
                 <ImageView
                     android:layout_width="24dp"
@@ -105,7 +106,7 @@
             <LinearLayout
                 android:id="@+id/ll_history"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="42dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -115,8 +116,7 @@
                     android:gravity="center_vertical"
                     android:paddingStart="10dp"
                     android:text="我的浏览"
-                    android:textColor="#000"
-                    android:textSize="18sp" />
+                     />
 
                 <ImageView
                     android:layout_width="24dp"
@@ -134,7 +134,7 @@
             <LinearLayout
                 android:id="@+id/ll_my_cook"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="42dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -144,8 +144,7 @@
                     android:gravity="center_vertical"
                     android:paddingStart="10dp"
                     android:text="我的美食"
-                    android:textColor="#000"
-                    android:textSize="18sp" />
+                    />
 
                 <ImageView
                     android:layout_width="24dp"
@@ -159,7 +158,7 @@
         <LinearLayout
             android:id="@+id/linearLayout_2"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/linearLayout_1"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
@@ -169,7 +168,7 @@
             <LinearLayout
                 android:id="@+id/ll_clear_cache"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="42dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -179,8 +178,7 @@
                     android:gravity="center_vertical"
                     android:paddingStart="10dp"
                     android:text="清除缓存"
-                    android:textColor="#000"
-                    android:textSize="18sp" />
+                     />
 
                 <TextView
                     android:id="@+id/tv_cache_size"
@@ -199,7 +197,7 @@
             <LinearLayout
                 android:id="@+id/ll_new"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="42dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -209,8 +207,7 @@
                     android:gravity="center_vertical"
                     android:paddingStart="10dp"
                     android:text="版本更新"
-                    android:textColor="#000"
-                    android:textSize="18sp" />
+                     />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -228,7 +225,7 @@
             <LinearLayout
                 android:id="@+id/ll_feedback"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="42dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -238,8 +235,7 @@
                     android:gravity="center_vertical"
                     android:paddingStart="10dp"
                     android:text="意见反馈"
-                    android:textColor="#000"
-                    android:textSize="18sp" />
+                     />
 
                 <ImageView
                     android:layout_width="24dp"
@@ -255,10 +251,10 @@
     <Button
         android:id="@+id/btn_quit"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="42dp"
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="14dp"
         android:background="#ff00"
         android:text="退出当前账号"
         android:textColor="#ffffff" />
