--- a/app/src/main/res/layout/activity_show_cookery.xml
+++ b/app/src/main/res/layout/activity_show_cookery.xml
@@ -51,7 +51,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_cookery"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="#EDF2F4"
         android:divider="@null"
         android:padding="5dp"
